Fixed: Enabling gravatas causes usernames to overlap first name field in user list (#7277).
git-svn-id: svn+ssh://rubyforge.org/var/svn/redmine/trunk@4700 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -914,8 +914,8 @@ h4 img.gravatar {
 }
 
 td.username img.gravatar {
-	float: left;
-	margin: 0 1em 0 0;
+	margin: 0 0.5em 0 0;
+	vertical-align: top;
 }
 
 #activity dt img.gravatar {
